--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,4 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
-spring.cache.type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
-
-spring.main.allow-bean-definition-overriding=true
+java.runtime.version=11
