--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <java.version>11</java.version>
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
+        <start-class>celsoaquino.track.TrackApplication</start-class>
     </properties>
     <dependencies>
         <dependency>
