--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-server.port=${PORT}
+server.port=$PORT
