--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-spring.jpa.properties.hibernate.jdbc.time_zone=America/São_Paulo
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb?serverTimezone=America/São_Paulo
