--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:mem:testdb?serverTimezone=America/São_Paulo
+spring.datasource.url=jdbc:h2:mem:testdb??useTimezone=true&serverTimezone=UTC
